app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - args:
        - skygear-server
        image: skygeario/skygear-server:v1.6.3
        name: app
        ports:
        - containerPort: 3000
        - containerPort: 5555
        resources: {}
        volumeMounts:
        - mountPath: /go/src/app/data
          name: chat-app-data
      restartPolicy: Always
      volumes:
      - name: chat-app-data
        persistentVolumeClaim:
          claimName: chat-app-data
status: {}
