app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  - name: "5555"
    port: 5555
    targetPort: 5555
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
