plugin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: plugin
  name: plugin
spec:
  ports:
  - name: "5555"
    port: 5555
    targetPort: 5555
  selector:
    io.kompose.service: plugin
status:
  loadBalancer: {}
